# python-templating-benchmarks

./: .gitignore  LICENSE  README.md  pyproject.toml  report.json
benchmarks/: fixtures.py  run.py
benchmarks/plots/: benchmarking_report.json
benchmarks/tools/: ashes.py  bottle.py  cheetah.py  chevron.py  django.py  jinja2.py  mako.py  pybars3.py  pydantic_handlebars.py  pyhandlebars.py  pystache.py  python.py  python_handlebars.py  string_template.py  tenjin.py  tornado.py  wheezy.py
