[project]
name = "python-templating-benchmarks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "pydantic>=2.12.5",
    "pybars3>=0.9.7",
    "python-handlebars>=0.0.3",
    "jinja2>=3.0.0",
    "mako>=1.3.10",
    "ashes>=24.0.0",
    "django>=6.0.3",
    "tenjin>=1.1.1",
    "wheezy-template>=3.2.5",
    "chevron>=0.14.0",
    "pystache>=0.6.8",
    "cheetah3>=3.2.6.post1",
    "tornado>=6.5.4",
    "bottle>=0.13.4",
    "pyhandlebars>=0.2.0",
    "pydantic-handlebars>=0.1.0",
]
